# SortingAlgorithmsComparison

./: .gitignore  CMakeLists.txt  README.md  speed_comparison.csv
data/: analysis.ipynb  ex2-2-results-ch.csv
scripts/bash/: cpp-env-setup.sh  mfcpp.sh
scripts/python/: visualisation.py
src/: CMakeLists.txt  experiment.cc  experiment.h  generators.cc  generators.h  main-lukasz-ex2.cpp  sorting-algos.cc  sorting-algos.h  utils.cc  utils.h
test/: CMakeLists.txt  generators-test.cc  sorting-algos-test.cc
