cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)

set(OUTPUT_PROGRAM ${CMAKE_PROJECT_NAME})

file(GLOB_RECURSE SOURCES LIST_DIRECTORIES false *.cc)
file(GLOB_RECURSE HEADERS LIST_DIRECTORIES false *.h)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_executable(${OUTPUT_PROGRAM}_run  ${HEADERS} ${SOURCES})

add_library(${OUTPUT_PROGRAM}_lib STATIC  ${HEADERS} ${SOURCES})

enable_testing()