cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)

set(OUTPUT_PROGRAM ${CMAKE_PROJECT_NAME}_test)

file(GLOB_RECURSE TEST_SOURCES LIST_DIRECTORIES false *.cc)
file(GLOB_RECURSE TEST_HEADERS LIST_DIRECTORIES false *.h )

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_executable(${OUTPUT_PROGRAM} ${TEST_SOURCES})

add_test(NAME ${OUTPUT_PROGRAM} COMMAND ${OUTPUT_PROGRAM})

target_link_libraries(${OUTPUT_PROGRAM} PUBLIC ${CMAKE_PROJECT_NAME}_lib gtest)